<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".ui.movie.newmovie.NewMovieFragment">

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/NmovieTitle"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.25">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xl_gap"
            android:layout_margin="@dimen/n_gap"
            android:background="@color/cardLayout"
            android:hint="@string/H_name"
            android:padding="@dimen/n_gap"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:text="@={viewmodel.name}"/>

        <EditText
            android:id="@+id/edit_text_category"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xl_gap"
            android:layout_margin="@dimen/n_gap"
            android:background="@color/cardLayout"
            android:hint="@string/H_category"
            android:padding="@dimen/n_gap"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:text="@={viewmodel.category}"/>

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xl_gap"
            android:layout_margin="@dimen/n_gap"
            android:background="@color/cardLayout"
            android:hint="@string/Hdescription"
            android:padding="@dimen/n_gap"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:text="@={viewmodel.description}"/>

        <EditText
            android:id="@+id/edit_text_calification"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xl_gap"
            android:layout_margin="@dimen/n_gap"
            android:background="@color/cardLayout"
            android:hint="@string/Hcalification"
            android:padding="@dimen/n_gap"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:text="@={viewmodel.qualification}"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="@dimen/n_gap"
        android:layout_marginEnd="158dp"
        android:text="@string/Submitbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:onClick="@{() -> viewmodel.createMovie()}"/>


</androidx.constraintlayout.widget.ConstraintLayout>